# advent-of-code-2022

./: README.md
01/: CMakeLists.txt
01/include/: solution.h
01/src/: main.cpp
01/test/: test.cpp
02/: CMakeLists.txt
02/include/: solution.h
02/src/: main.cpp
02/test/: test.cpp
03/: CMakeLists.txt
03/include/: solution.h
03/src/: main.cpp
03/test/: test.cpp
04/include/: solution.h
04/src/: main.cpp
04/test/: test.cpp
common/include/common/: load_input.h  math.h
